fixed panel-collapse background-color
Former-commit-id: 8b32b3431ef0648416652f45a4c2e3a662919d3c

--- a/moa-client/app/styles/search.scss
+++ b/moa-client/app/styles/search.scss
@@ -46,6 +46,9 @@
     background-color: #f8f8f8 !important;
 }
 
+.panel-collapse {
+    background-color: #f8f8f8;
+}
 
 .panel.panel-default.panel-open {
     border: none;
